[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/dash_board.png" type="Texture" id=1]
[ext_resource path="res://entities/value.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/control_clickable.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/mockup.png" type="Texture" id=4]
[ext_resource path="res://entities/dash_board.gd" type="Script" id=5]

[node name="dash_board" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 589.555, 327.837 )
texture = ExtResource( 1 )

[node name="boat_price" parent="." instance=ExtResource( 2 )]
position = Vector2( 301.978, 200.381 )
value = 1000.0

[node name="boat_cost" parent="." instance=ExtResource( 2 )]
position = Vector2( 384.753, 200.53 )
value = 100.0

[node name="boats" parent="." instance=ExtResource( 2 )]
position = Vector2( 321.611, 159.193 )
value = 1.0

[node name="small_docks" parent="." instance=ExtResource( 2 )]
position = Vector2( 430.115, 259.767 )
value = 1.0

[node name="big_docks" parent="." instance=ExtResource( 2 )]
position = Vector2( 437.052, 294.779 )

[node name="small_dock_price" parent="." instance=ExtResource( 2 )]
position = Vector2( 396.648, 339.549 )
value = 400.0

[node name="big_dock_price" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 398.515, 386.854 )
value = 200.0

[node name="beach_capacity" parent="." instance=ExtResource( 2 )]
position = Vector2( 420.3, 438.516 )
value = 100.0

[node name="deforest_price" parent="." instance=ExtResource( 2 )]
position = Vector2( 381.709, 484.576 )
value = 1500.0

[node name="insta_price" parent="." instance=ExtResource( 2 )]
position = Vector2( 673.695, 456.095 )
value = 2500.0

[node name="corrupt_price" parent="." instance=ExtResource( 2 )]
position = Vector2( 826.047, 458.434 )
value = 10000.0

[node name="kid_price" parent="." instance=ExtResource( 2 )]
position = Vector2( 902.222, 473.069 )
value = 10.0

[node name="day_num" parent="." instance=ExtResource( 2 )]
position = Vector2( 646.757, 63.547 )
scale = Vector2( 1.2, 1.2 )

[node name="wealth" parent="." instance=ExtResource( 2 )]
position = Vector2( 102.195, 55.3454 )
scale = Vector2( 1.2, 1.2 )
value = -1200.0

[node name="boat_button" parent="." instance=ExtResource( 3 )]
position = Vector2( 216.631, 215.708 )
show_hover = true

[node name="Sprite" parent="boat_button" index="0"]
position = Vector2( -5.06977, -2.53489 )
scale = Vector2( 0.464983, 0.233189 )

[node name="dock_button" parent="." instance=ExtResource( 3 )]
position = Vector2( 273.074, 349.328 )
show_hover = true

[node name="Sprite" parent="dock_button" index="0"]
position = Vector2( -2.95658, -2.36527 )
scale = Vector2( 0.652784, 0.226659 )

[node name="Control" parent="dock_button" index="1"]
margin_left = -74.0
margin_top = -21.0
margin_right = 79.0
margin_bottom = 19.0

[node name="upgrade_button" parent="." instance=ExtResource( 3 )]
position = Vector2( 276.53, 395.403 )
enabled = false
show_hover = true

[node name="Sprite" parent="upgrade_button" index="0"]
position = Vector2( -0.591312, 0.295666 )
scale = Vector2( 0.66882, 0.206032 )

[node name="Control" parent="upgrade_button" index="1"]
margin_left = -74.0
margin_top = -21.0
margin_right = 80.0
margin_bottom = 19.0

[node name="deforest_button" parent="." instance=ExtResource( 3 )]
position = Vector2( 245.429, 495.618 )
show_hover = true

[node name="Sprite" parent="deforest_button" index="0"]
position = Vector2( -4.55321, 0.151754 )
scale = Vector2( 0.583996, 0.232938 )

[node name="Control" parent="deforest_button" index="1"]
margin_left = -69.0
margin_top = -21.0
margin_right = 67.0
margin_bottom = 19.0

[node name="insta_button" parent="." instance=ExtResource( 3 )]
position = Vector2( 600.211, 474.884 )
show_hover = true

[node name="Sprite" parent="insta_button" index="0"]
position = Vector2( -2.34879, 0 )
scale = Vector2( 0.315924, 0.3 )

[node name="Control" parent="insta_button" index="1"]
margin_left = -36.0
margin_top = -23.0
margin_right = 37.0
margin_bottom = 28.0

[node name="corrupt_button" parent="." instance=ExtResource( 3 )]
position = Vector2( 751.109, 469.124 )
show_hover = true

[node name="Control" parent="corrupt_button" index="1"]
margin_left = -33.0
margin_top = -27.0
margin_right = 31.0
margin_bottom = 25.0

[node name="kid_button" parent="." instance=ExtResource( 3 )]
position = Vector2( 912.374, 440.327 )
show_hover = true

[node name="Sprite" parent="kid_button" index="0"]
position = Vector2( 0, 1.60707 )
scale = Vector2( 0.3, 0.205129 )

[node name="Control" parent="kid_button" index="1"]
margin_left = -30.0
margin_top = -20.0
margin_right = 31.0
margin_bottom = 23.0

[node name="cheap_button" parent="." instance=ExtResource( 3 )]
position = Vector2( 878.383, 165.316 )
show_hover = true

[node name="Sprite" parent="cheap_button" index="0"]
position = Vector2( -3.89297, 1.87441 )
scale = Vector2( 0.433921, 0.173699 )

[node name="Control" parent="cheap_button" index="1"]
margin_left = -86.0
margin_top = -17.0
margin_right = 50.0
margin_bottom = 14.0

[node name="mild_button" parent="." instance=ExtResource( 3 )]
position = Vector2( 883.577, 197.278 )
show_hover = true

[node name="Sprite" parent="mild_button" index="0"]
position = Vector2( -20.1859, 5.91154 )
scale = Vector2( 0.30782, 0.173699 )

[node name="Control" parent="mild_button" index="1"]
margin_left = -85.0
margin_top = -10.0
margin_right = 17.0
margin_bottom = 22.0

[node name="expensive_button" parent="." instance=ExtResource( 3 )]
position = Vector2( 911.222, 239.898 )
show_hover = true

[node name="Sprite" parent="expensive_button" index="0"]
position = Vector2( -3.60464, -0.720936 )
scale = Vector2( 0.721312, 0.204995 )

[node name="Control" parent="expensive_button" index="1"]
margin_left = -111.0
margin_top = -16.0
margin_right = 84.0
margin_bottom = 14.0

[node name="close_button" parent="." instance=ExtResource( 3 )]
position = Vector2( 1070.54, 79.1366 )
show_hover = true

[node name="Sprite" parent="close_button" index="0"]
position = Vector2( -0.93369, 3.11218 )
scale = Vector2( 0.386508, 0.435102 )

[node name="Control" parent="close_button" index="1"]
margin_left = -46.0
margin_top = -36.0
margin_right = 42.0
margin_bottom = 47.0

[node name="ref_cheap" type="Position2D" parent="."]
position = Vector2( 805.786, 165.383 )

[node name="ref_mild" type="Position2D" parent="."]
position = Vector2( 805.786, 203.406 )

[node name="ref_expensive" type="Position2D" parent="."]
position = Vector2( 805.668, 236.279 )

[node name="cursor" type="Sprite" parent="."]
position = Vector2( 806.062, 165.088 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 856.977, 952.382, 88.5197, 63.4669 )
[connection signal="clicked" from="boat_button" to="." method="_on_boat_button_clicked"]
[connection signal="clicked" from="dock_button" to="." method="_on_dock_button_clicked"]
[connection signal="clicked" from="upgrade_button" to="." method="_on_upgrade_button_clicked"]
[connection signal="clicked" from="deforest_button" to="." method="_on_deforest_button_clicked"]
[connection signal="clicked" from="insta_button" to="." method="_on_insta_button_clicked"]
[connection signal="clicked" from="corrupt_button" to="." method="_on_corrupt_button_clicked"]
[connection signal="clicked" from="kid_button" to="." method="_on_kid_button_clicked"]
[connection signal="clicked" from="cheap_button" to="." method="_on_cheap_button_clicked"]
[connection signal="clicked" from="mild_button" to="." method="_on_mild_button_clicked"]
[connection signal="clicked" from="expensive_button" to="." method="_on_expensive_button_clicked"]
[connection signal="clicked" from="close_button" to="." method="_on_close_button_clicked"]

[editable path="boat_button"]

[editable path="dock_button"]

[editable path="upgrade_button"]

[editable path="deforest_button"]

[editable path="insta_button"]

[editable path="corrupt_button"]

[editable path="kid_button"]

[editable path="cheap_button"]

[editable path="mild_button"]

[editable path="expensive_button"]

[editable path="close_button"]
